--- a/Projekt_Informatyka/Projekt_Informatyka.vcxproj
+++ b/Projekt_Informatyka/Projekt_Informatyka.vcxproj
@@ -145,17 +145,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseGame.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="MenuLevels.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Przeciwnik.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseGame.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Menu.h" />
-    <ClInclude Include="MenuLevels.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Przeciwnik.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
