--- a/Projekt_Informatyka/Projekt_Informatyka.vcxproj
+++ b/Projekt_Informatyka/Projekt_Informatyka.vcxproj
@@ -150,14 +150,20 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Przeciwnik.cpp" />
+    <ClCompile Include="Pocisk.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Punkty.cpp" />
+    <ClCompile Include="Serce.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGame.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Przeciwnik.h" />
+    <ClInclude Include="Pocisk.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Punkty.h" />
+    <ClInclude Include="Serce.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
