--- a/Projekt_Informatyka/Projekt_Informatyka.vcxproj
+++ b/Projekt_Informatyka/Projekt_Informatyka.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MenuWyjscia.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Pocisk.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="BaseGame.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuWyjscia.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Pocisk.h" />
     <ClInclude Include="Enemy.h" />
